Implement AdGlide SDK with support for various ad formats and a comprehensive demo application.